k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: corporate-website-service
  labels:
    app: corporate-website
spec:
  type: NodePort
  selector:
    app: corporate-website
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
    name: http
